# robot_ws

./: .gitignore  Arcuo.py  README.md  WORKSPACE.md  bug.yaml  center_pose.txt  plot_admittance_log.py  plot_tracking_all_q.py.py  plot_workspace.py  plot_workspace_base.py
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/robot_control/: GetBaseLinkPose.h  GetBaseLinkPoseRequest.h  GetBaseLinkPoseResponse.h
devel/include/robot_planning/: CartesianInterpolation.h  CartesianInterpolationRequest.h  CartesianInterpolationResponse.h  PlanPath.h  PlanPathRequest.h  PlanPathResponse.h  RobotPose.h  RobotPoseRequest.h  RobotPoseResponse.h
devel/lib/pkgconfig/: robot_common.pc  robot_control.pc  robot_description.pc  robot_planning.pc  robot_rrt.pc  robotiq_2f_85_gripper_gazebo.pc  robotiq_2f_85_gripper_visualization.pc  robotiq_modbus_rtu.pc  robotiq_modbus_tcp.pc
devel/lib/robot_common/: listen_tf  listen_tf_dummy_point3
devel/lib/robot_control/: gripper_control  init_angle_pub  joint_angle_publisher  robot_control_node
devel/lib/robot_planning/: cartesian_interpolation_server  example_leg_transform  get_base_link_pose  get_base_link_pose_test  robot_pose_server
devel/lib/robot_rrt/: rrt_cli
src/moveit_config/: .setup_assistant  package.xml
src/moveit_config/config/: fake_controllers.yaml  gazebo_robot_description.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robot_description.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/moveit_config/launch/: demo.launch  gazebo.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
src/object/: package.xml
src/object/launch/: display.launch  gazebo.launch
src/object/meshes/: grasp_object.STL
src/object/urdf/: object.SLDASM.urdf
src/object_cube/: CMakeLists.txt  package.xml
src/object_cube/launch/: display.launch  gazebo.launch
src/object_cube/meshes/: base_link.STL
src/object_cube/urdf/: object_cube.SLDASM.urdf
src/robot_common/: CMakeLists.txt  package.xml
src/robot_common/config/: common_tf.yaml  tf_using.yaml  transform.yaml
src/robot_common/src/: listen_tf.cpp  listen_tf_dummy_point3.cpp  listen_tf_workspace.cpp
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/config/: common_tf.yaml  init_angles.yaml  robot_control_config.yaml
src/robot_control/data/: admittance_data.csv
src/robot_control/launch/: robot_control.launch
src/robot_control/src/: Gripper_Driver.cpp  force_const.cpp  force_mixed.cpp  force_sine.cpp  force_zero.cpp  grasp_pose_static_tf_publisher.cpp  gripper_control.cpp  gripper_driver.cpp  ikfast_single_arm.cpp  init_angle_pub.cpp  joint_angle_publisher.cpp  motor_driver.cpp  robot_control.cpp  torque_disturb.cpp
src/robot_control/srv/: GetBaseLinkPose.srv
src/robot_description/: CMakeLists.txt  package.xml  urdf.rviz
src/robot_description/config/: robot_gazebo.yaml
src/robot_description/launch/: display_animation.launch  display_animation_cs.launch  init_robot_display.launch  robot_display.launch  robot_display_moveit.launch  robot_gazebo.launch
src/robot_description/meshes/: truss_link.STL
src/robot_description/urdf/: Hurdles.xacro  demo_robot_3dros.xacro  float_space_robot.xacro  robot_3dros.srdf  robot_3dros.urdf  robot_description copy.xacro  robot_description.urdf  robot_description.xacro  (+6 more)
src/robot_gui/: CMakeLists.txt  package.xml
src/robot_moveit_config/: .setup_assistant  package.xml
src/robot_mpc/: CMakeLists.txt  package.xml
src/robot_mpc/config/: mpc_result_log.yaml
src/robot_mpc/include/robot_mpc/: mpc_controller.h
src/robot_mpc/models/: limbarm_robot.srdf  limbarm_robot.xacro.urdf  robot_3dros.xacro  single_arm_pino.urdf
src/robot_mpc/models/meshes/: Hand.STL  Link_0.STL  Link_6.STL
src/robot_mpc/src/: mpc_controller.cpp  robot_mpc.cpp
src/robot_planning/: CMakeLists.txt  package.xml
src/robot_planning/config/: dual_arm_ik_result.yaml  dual_arm_interpolated_poses.yaml  gold_config.yaml  ik_solutions.yaml  ik_urdf_double_arm_float.yaml  init_config.yaml  joint_limits.yaml  leg_ik_cs.yaml  leg_ik_cs_home.yaml  planned_trajectory.yaml  planning_result.yaml  planning_result_home.yaml  result_cs.yaml  result_cs_home.yaml  tf_double_arm_float.yaml  tf_using.yaml  workspace.yaml
src/robot_planning/include/robot_planning/: dual_arm_ik.h  full_body_trajectory.h  ik_solver.h  ikfast_wrapper_single_arm.h  leg_ik_cs.h  leg_transform_cs.h  yaml_common.h
src/robot_planning/launch/: get_base_workspace.launch
src/robot_planning/models/: robot_3dros.xacro
src/robot_planning/models/meshes/: Link_1.STL  Link_4.STL  Link_5.STL  Link_platform.STL  Link_platlink2.STL  base_link.STL
src/robot_planning/src/: cartesian_interpolation_server.cpp  dualArmRRT.cpp  dual_arm_ik.cpp  dual_arm_planning.cpp  example_leg_transform.cpp  full_body_trajectory.cpp  get_base_link_pose.cpp  get_base_link_pose_pinoc.cpp  get_base_link_pose_test.cpp  get_base_workspace.cpp  get_base_workspace_check_collision.cpp  get_branch2and3_workspace.cpp  ik_solver.cpp  ik_urdf_double_arm_float.cpp  ikfast_single_arm.cpp  ikfast_wrapper_single_arm.cpp  leg_ik_cs.cpp  leg_transform_cs.cpp  robot_model.cpp  robot_planning.cpp  robot_planning_home.cpp  robot_pose_server.cpp  yaml_common.cpp
src/robot_planning/srv/: CartesianInterpolation.srv  PlanDualArmPath.srv  PlanPath.srv  PlanPathHome.srv  RobotPose.srv
src/robot_rrt/: CMakeLists.txt  package.xml
src/robot_rrt/config/: planned_path.yaml
src/robot_rrt/include/robot_rrt/: BSplineInterpolator.h  robot_model.h
src/robot_rrt/models/: double_arms_description.urdf  single_arm.gv
src/robot_rrt/models/meshes/: Link_2.STL  Link_3.STL  Link_platlink.STL
src/robot_rrt/src/: BSplineInterpolator.cpp  add_truss_link_node.cpp  check_collision_server.cpp  collision_check_node.cpp  dualArmRRT.cpp  ompl_rrt_connect_node.cpp  ompl_rrt_server.cpp  robot_model.cpp  rrt_cli.cpp
src/robot_rrt/srv/: CheckCollision.srv  RRTPlanPath.srv
src/robot_vision/: CMakeLists.txt  package.xml
(+70 files in other folders)
